--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,8 @@
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
-    background-color: #f4f4f4;
-    color: #333;
+    background-color: #6f9e88;
+    color: #111010;
 }
 
 header {
@@ -103,9 +103,9 @@ section {
 }
 
 .species-card {
-    background: #fff;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    background: #9aa0a1;
+    border-radius: 40px;
+    box-shadow: 0 4px 8px rgba(214, 124, 124, 0.1);
     padding: 1rem;
     text-align: center;
 }
@@ -119,7 +119,7 @@ section {
 
 
 .about-section {
-    background-color: #ecf0f1;
+    background-color: #eff2f3;
     padding: 20px;
     border-radius: 8px;
     max-width: 800px;
@@ -132,7 +132,7 @@ section {
 
 footer {
     background-color: #2e4155;
-    color: white;
+    color: rgb(207, 199, 199);
     text-align: center;
     padding: 10px 0;
     position: relative;
@@ -144,6 +144,11 @@ footer p {
 }
 
 .abb{
-    position: sticky;
+    position:sticky;
     top: 0%;
+}
+
+
+.species-card:hover {
+    transform: scale(1.07); /* Slightly enlarge on hover */
 }
