--- a/style1.css
+++ b/style1.css
@@ -7,47 +7,39 @@
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
+    background-color: #a3a795;
     color: #333;
 }
 @media (min-width: 400px) and (max-width: 800px) {
     body{
       background-color: rgb(81, 58, 207);
     }
-    .content{
-        max-width: 700px;
-    }
+   
   }
 @media (min-width: 801px) and (max-width: 1200px) {
     body{
       background-color: lightsalmon;
     }  
-    .content{
-        max-width: 300px;
-    }
+    
   }
   @media (min-width:1201px) and (max-width:1400px) {
     body{
       background-color: powderblue;
      }
-     .content{
-        max-width: 500px;
-    }
-   
+    
   }
   @media (min-width: 1401px) and (max-width:1600px) {
     body{
       background-color:#927676;
     }
-    .content{
-        max-width: 700px;
-    }
+   
   }
 
 header {
     display: flex;
-    justify-content: space-between;  /* This pushes the title and nav apart */
-    align-items: center;   /* Centers items vertically */
-    background-color: #333;   /* Adjust background color if needed */
+    justify-content: space-between;        /* This pushes the title and nav apart */
+    align-items: center;         /* Centers items vertically */
+    background-color: #333;     /* Adjust background color if needed */
     padding: 10px 20px;
     color: white;
 }
@@ -64,13 +56,13 @@ nav ul {
 }
 
 nav ul li {
-    margin-left: 20px;  /* Space between nav items */
+    margin-left: 20px;        /* Space between nav items */
 }
 
 nav ul li a {
     color: white;
     text-decoration: none;
-    font-size: 16px;
+    font-size: 20px;
 }
 
 nav ul li a:hover {
@@ -87,7 +79,7 @@ footer {
     background-color: #2c3e50;
     color: white;
     text-align: center;
-    padding: 10px 0;
+    padding: 15px 0;
     position: relative;
     bottom: 0;
     width: 100%;
@@ -107,15 +99,15 @@ footer p {
     max-width: 700px;
     margin: 20px auto;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
-    transition: transform 0.2s;   /* Smooth scaling effect */
+    transition: transform 0.2s;      /* Smooth scaling effect */
 }
 .content:hover {
-    transform: scale(1.04);       /* Slightly enlarge on hover */
+    transform: scale(1.03);         /* Slightly enlarge on hover */
 }
 .content img{
     width: 100%;
     border-radius: 30%;
-    border: 10px solid #2e2f8d;    /* Darker border for the image */
+    border: 10px solid #2e2f8d;      /* Darker border for the image */
 }
 .content h2 {
     color: #005f5f;
@@ -124,12 +116,12 @@ footer p {
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);   /* Soft shadow for the title */
 }
 .content h3 {
-    color: #007f7f;
+    color: #485f5f;
     margin-top: 15px;
     font-size: 1.5em;
 }
 .content p {
-    line-height: 1.8; /* Improved line spacing */
-    font-size: 1.1em;
-    margin: 10px 0;
+    line-height: 1.8;      /* Improved line spacing */
+    font-size: 1.1rem;
+    margin: 10px O;
 }
