--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
-    background-color: #6f9e88;
+    background-color: #939e8e;
     color: #111010;
 }
 
@@ -33,7 +33,7 @@ nav ul {
 }
 
 nav ul li {
-    margin-left: 20px;  /* Space between nav items */
+    margin-left: 20px;                                    /* Space between nav items */
 }
 
 nav ul li a {
@@ -60,14 +60,14 @@ nav ul li a:hover {
 }
 
 .hero::before {
-    content: ""; /* Creates a pseudo-element */
-    position: absolute; /* Position it absolutely within the hero */
-    top: 0; /* Start from the top */
-    left: 0; /* Start from the left */
-    right: 0; /* Extend to the right */
-    bottom: 0; /* Extend to the bottom */
-    background: rgba(0, 0, 0, 0.356); /* Black overlay with transparency */
-    z-index: 1; /* Ensure it's below the text but above the image */
+    content: "";                        /* Creates a pseudo-element */
+    position: absolute;               /* Position it absolutely within the hero */
+    top: 0;             /* Start from the top */
+    left: 0;       /* Start from the left */
+    right: 0;           /* Extend to the right */
+    bottom: 0;                /* Extend to the bottom */
+    background: rgba(0, 0, 0, 0.356);           /* Black overlay with transparency */
+    z-index: 1;                              /* Ensure it's below the text but above the image */
 }
 
 .hero h2 {
@@ -79,7 +79,7 @@ nav ul li a:hover {
 
 .hero p {
     position: relative; /* Position relative to the hero */
-    z-index: 2; /* Bring it above the overlay */
+    z-index: 2;                                                             /* Bring it above the overlay */
     font-size: 1.5em; /* Adjust the font size */
     margin-top: 10px; /* Add some space above the paragraph */
 }
@@ -87,9 +87,7 @@ section {
     padding: 2rem;
     text-align: center;
 }
-.aa{
-    background: url('image.png') no-repeat center center/cover;
-}
+
 #about {
     background: #f9f9f9;
      color: #000;
@@ -114,7 +112,7 @@ section {
     width: 100%;
     height: 200px;
     object-fit: cover;
-    border-radius: 10px 10px 0 0;
+    border-radius: 40px 40px 0 0;
 }
 
 
@@ -150,5 +148,5 @@ footer p {
 
 
 .species-card:hover {
-    transform: scale(1.07); /* Slightly enlarge on hover */
+    transform: scale(1.07);             /* Slightly enlarge on hover */
 }
